# guile-wayland

./: .gitignore  Makefile.am  README.md  configure.ac  env.in  guile-wayland-client.pc.in  guile-wayland-server.pc.in  guile-wayland.pc.in  meson.build  meson.build.old  wayland-scanner-guile.in
.reuse/: dep5
doc/: meson.build  snarf-docs.scm
examples/: cairo-client.scm  egl-client.scm
guile-wayland/: guile-wayland-client-init.c  guile-wayland-client-init.c.in  guile-wayland-client.c  guile-wayland-client.h  guile-wayland-cursor.c  guile-wayland-cursor.h  guile-wayland-egl.c  guile-wayland-egl.h  guile-wayland-server.c  guile-wayland-server.h  guile-wayland-util-private.h  guile-wayland-util.c  guile-wayland-util.h  guile-wayland-utils.c  guile-wayland-utils.h  meson.build  snarf-helper.py.in
module/: meson.build
module/wayland/: config.scm.in  meson.build  scanner.scm
tests/: integration.scm  server.scm
wayland/: client.scm  config.scm.in  cursor.scm  egl.scm  meson.build  scanner.scm  server.scm  util.scm
wayland/client/: config.scm.in  core.scm  meson.build  util.scm  utils.scm
wayland/server/: core.scm  util.scm
